objects/EUR_CRM_DeliveryItem__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Delivery_line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AdditionalDiscountPercent__c</fullName>
        <label>Additional Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AnnualVolumeDisPer__c</fullName>
        <label>AnnualVolumeDiscountPercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryDate__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryFee__c</fullName>
        <label>Delivery Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery</label>
        <referenceTo>EUR_CRM_Delivery__c</referenceTo>
        <relationshipName>Delivery_line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryQuantity__c</fullName>
        <label>DeliveryQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliverySAPDocCreated__c</fullName>
        <label>DeliverySAPDocCreated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliverySAPDocNumber__c</fullName>
        <label>DeliverySAPDocNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryTypeDisPer__c</fullName>
        <label>DeliveryTypeDisPer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Discount__c</fullName>
        <formula>EUR_CRM_OrderitemID__r.EUR_CRM_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_EAN__c</fullName>
        <label>EAN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_FinalPrice__c</fullName>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_FinancialDiscount__c</fullName>
        <label>Financial Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_FreeQuantity__c</fullName>
        <label>Free Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_GrossAmount__c</fullName>
        <label>GrossAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_HigherLevelItem__c</fullName>
        <label>Higher level item</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_InitialOrderQuantity__c</fullName>
        <label>Initial Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_InvoiceDate__c</fullName>
        <label>InvoiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_InvoiceNumber__c</fullName>
        <label>InvoiceNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_LineSeqNo__c</fullName>
        <label>LineSeqNo</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_LogisticHandlingDisPer__c</fullName>
        <label>LogisticHandlingDiscountPercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_NETValueAmount__c</fullName>
        <label>Net value amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OrderID__c</fullName>
        <label>Sales Order</label>
        <referenceTo>EUR_CRM_Sales_Order__c</referenceTo>
        <relationshipName>Delivery_line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OrderitemID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Item</label>
        <referenceTo>EUR_CRM_Sales_Order_Items__c</referenceTo>
        <relationshipName>Delivery_line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 monthes</fullName>
                </value>
                <value>
                    <fullName>6 monthes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_ProductMaterialNumber__c</fullName>
        <label>ProductMaterialNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product__c</fullName>
        <formula>EUR_CRM_OrderitemID__r.EUR_CRM_ProductID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PromotionalDiscountAmount__c</fullName>
        <label>PromotionalDiscountAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PromotionalDiscountPercent__c</fullName>
        <label>Promotional Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RealDeliveryDate__c</fullName>
        <label>Real Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_StructuralDiscountAmount__c</fullName>
        <label>Structural Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_StructuralDiscountPercent__c</fullName>
        <label>Structural Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TVA__c</fullName>
        <label>TVA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TaxesAmount__c</fullName>
        <label>Taxes Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TaxesPercent__c</fullName>
        <label>TaxesPercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TurnoverQuantity__c</fullName>
        <label>TurnoverQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Delivery line item (EU)</label>
    <nameField>
        <displayFormat>DLI-{000000000}</displayFormat>
        <label>Delivery line item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery line items (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>